# FastAPI-Kafka-MongoDB-OpenAI

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env  .gitignore  background.py  main.py
app/api/: openai_api.py
app/api/routes/: recommendations_route.py  status_route.py
app/core/: config.py
app/db/: mongodb.py
app/schemas/: schema.py
app/utils/: kafka.py
test/: sample_test.py
