[tool.poetry]
name = "fastapi-kafka-mongodb-openai"
version = "1.0"
description = ""
authors = ["Liem Vinh Tran <rintran1307@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pymongo = "^4.7.3"
asyncio = "^3.4.3"
aiokafka = "^0.10.0"
pycountry = "^24.6.1"
openai = "^1.33.0"
pydantic-settings = "^2.2.1"
pytest = "^8.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"